--- a/webui/src/modules/productDetail/productDetail.scss
+++ b/webui/src/modules/productDetail/productDetail.scss
@@ -8,15 +8,7 @@
   text-align: justify;
 }
 
-.itemsForUser {
-  h3 {
-    border-top: 1px solid $col-dark-primary;
-    padding-top: 10px;
-    color: $col-dark-primary;
-  }
-}
-
-.similar {
+.related-section {
   h3 {
     border-top: 1px solid $col-dark-primary;
     padding-top: 10px;
